--- a/CheckerZ/CheckerZ.vcxproj.filters
+++ b/CheckerZ/CheckerZ.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="Game.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Parallelism\Parallel.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="API\Board.cpp">
