standardized literals as 32bit and settled a use of uint32 for all literal type size matters. Soz, can't think of a clearer way to explain.

--- a/CheckerZ/CheckerZ.vcxproj
+++ b/CheckerZ/CheckerZ.vcxproj
@@ -112,6 +112,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="API\Board.hpp" />
+    <ClInclude Include="Common.hpp" />
     <ClInclude Include="Parallelism\Parallel.hpp" />
     <ClInclude Include="Game.hpp" />
   </ItemGroup>
