--- a/CheckerZ/CheckerZ.vcxproj
+++ b/CheckerZ/CheckerZ.vcxproj
@@ -112,6 +112,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="API\Board.hpp" />
+    <ClInclude Include="API\Events\IEvent.hpp" />
+    <ClInclude Include="API\Logger.hpp" />
     <ClInclude Include="Common.hpp" />
     <ClInclude Include="Parallelism\Parallel.hpp" />
     <ClInclude Include="Game.hpp" />
