--- a/CheckerZ/CheckerZ.vcxproj
+++ b/CheckerZ/CheckerZ.vcxproj
@@ -114,9 +114,15 @@
     <ClInclude Include="API\Board.hpp" />
     <ClInclude Include="API\Events\EventFacility.hpp" />
     <ClInclude Include="API\Events\EventFactory.hpp" />
+    <ClInclude Include="API\Events\EventImpl\events.h" />
+    <ClInclude Include="API\Events\EventImpl\LoseGame.hpp" />
+    <ClInclude Include="API\Events\EventImpl\MoveEntity.hpp" />
+    <ClInclude Include="API\Events\EventImpl\QuitGame.hpp" />
+    <ClInclude Include="API\Events\EventImpl\TakeEntityPawn.hpp" />
     <ClInclude Include="API\Events\EventManager.hpp" />
-    <ClInclude Include="API\Events\Win.hpp" />
+    <ClInclude Include="API\Events\EventImpl\WinGame.hpp" />
     <ClInclude Include="API\Logger.hpp" />
+    <ClInclude Include="API\Utils\GameHelper.hpp" />
     <ClInclude Include="Common.hpp" />
     <ClInclude Include="Entity\Entity.hpp" />
     <ClInclude Include="Entity\Player\Player.hpp" />
@@ -125,7 +131,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="API\Board.cpp" />
-    <ClCompile Include="API\Events\Win.cpp" />
+    <ClCompile Include="API\Events\EventImpl\LoseGame.cpp" />
+    <ClCompile Include="API\Events\EventImpl\MoveEntity.cpp" />
+    <ClCompile Include="API\Events\EventImpl\QuitGame.cpp" />
+    <ClCompile Include="API\Events\EventImpl\TakeEntityPawn.cpp" />
+    <ClCompile Include="API\Events\EventImpl\WinGame.cpp" />
     <ClCompile Include="Entity\Player\Player.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Main.cpp" />
