Moving pawn by player correct check

--- a/CheckerZ/CheckerZ.vcxproj.filters
+++ b/CheckerZ/CheckerZ.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="API\Pawn.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="API\King.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="API\Board.cpp">
