--- a/CheckerZ/CheckerZ.vcxproj
+++ b/CheckerZ/CheckerZ.vcxproj
@@ -119,6 +119,7 @@
     <ClInclude Include="API\Events\EventImpl\QuitGame.hpp" />
     <ClInclude Include="API\Events\EventManager.hpp" />
     <ClInclude Include="API\Events\EventImpl\WinGame.hpp" />
+    <ClInclude Include="API\King.hpp" />
     <ClInclude Include="API\Logger.hpp" />
     <ClInclude Include="API\Pawn.hpp" />
     <ClInclude Include="Common.hpp" />
