--- a/CheckerZ/CheckerZ.vcxproj
+++ b/CheckerZ/CheckerZ.vcxproj
@@ -137,8 +137,9 @@
     <ClCompile Include="API\Events\EventImpl\WinGame.cpp" />
     <ClCompile Include="API\Utils\MovesEvaluator.cpp" />
     <ClCompile Include="API\Utils\MovesGenerator.cpp" />
-    <ClCompile Include="Entity\AI\AdvancedAI.cpp" />
-    <ClCompile Include="Entity\AI\SimpleAI.cpp" />
+    <ClCompile Include="Entity\AI\HardAI.cpp" />
+    <ClCompile Include="Entity\AI\MediumAI.cpp" />
+    <ClCompile Include="Entity\AI\EasyAI.cpp" />
     <ClCompile Include="Entity\Player\Player.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Main.cpp" />
