--- a/CheckerZ/CheckerZ.vcxproj
+++ b/CheckerZ/CheckerZ.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="API\Events\EventImpl\EntityPawnAction.cpp" />
     <ClCompile Include="API\Events\EventImpl\QuitGame.cpp" />
     <ClCompile Include="API\Events\EventImpl\WinGame.cpp" />
+    <ClCompile Include="API\Events\EventManager.cpp" />
     <ClCompile Include="API\Utils\MovesEvaluator.cpp" />
     <ClCompile Include="API\Utils\MovesGenerator.cpp" />
     <ClCompile Include="Entity\AI\HardAI.cpp" />
